Fix download list text

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         
 
             <ul>
-                <li>生成した時系列データ
+                <li>生成した時系列データをcsvファイルとしてダウンロード
                     <ul id="download-list">
                     </ul>
                 </li>
