--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <body>
         <h1>手書き時系列データ生成器</h1>
         <p>手書きしたグラフから時系列データを生成するツールです。Unixtimeと値をcsv形式で出力します。</p>
+        <p>内容について: <a href="https://zenn.dev/k8shiro/articles/handwriting_time-series_data_converter">https://zenn.dev/k8shiro/articles/handwriting_time-series_data_converter</a></p>
+        <p>リポジトリ: <a href="https://github.com/k8shiro/handwriting_time-series_data_converter">https://github.com/k8shiro/handwriting_time-series_data_converter</a></p>
 
         <ul>
             <li>使い方
